--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+21 Oct 2016 - v0.06
+    * Fix broken tests on Windows
+
 11 Dec 2014 - v0.05
     * Attempt to guess the open mode properly on Win32 when fcntl() fails
 
