--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+24 Mar 2017 - v0.08
+    * Fix error with tests when FileHandle::Fmode wasn't installed
+
 23 Mar 2017 - v0.07
     * Encoding non-ref GLOBs is working, which means it can encode a stash
 
