--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+26 Oct 2019 - v0.09
+    * Fix bug when encoding objects with stringify overloading
+    * IO refs returned by Symbol::geniosym are properly handled
+
 24 Mar 2017 - v0.08
     * Fix error with tests when FileHandle::Fmode wasn't installed
 
